tests/baselines/reference/inheritanceStaticFunctionOverridingInstanceProperty(strict=true).errors.txt
inheritanceStaticFunctionOverridingInstanceProperty.ts(2,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== inheritanceStaticFunctionOverridingInstanceProperty.ts (1 errors) ====
    class a {
        x: string;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    class b extends a {
        static x() {
            return new b().x;
        }
    }